# Seq2Construct

./: .gitattributes  .gitignore  main.py  pyproject.toml
data/: pooled_embeddings.pt
testing/data/: labeller.py  rcsb.ipynb  rscb.ipynb
testing/data/notebooks/: em.ipynb  rcsb.ipynb
testing/data/scripts/: labeller.py
